@@ -1,3 +1,7 @@
+2008-08-21  Mirco Bauer <meebey@meebey.net> 
+
+	* Session.cs: Don't handle quit command in session. (closes trac bug #92)
+
 2008-08-04  Mirco Bauer <meebey@meebey.net> 
 
 	* TextColor.cs: Renamed HexCode to Value.
