@@ -1,3 +1,8 @@
+2008-08-21  Mirco Bauer <meebey@meebey.net> 
+
+	* Protocols/Irc/IrcProtocolManager.cs: Dispose all chats after quitting in
+	  CommandQuit().
+
 2008-08-05  Mirco Bauer <meebey@meebey.net> 
 
 	* Protocols/Irc/IrcProtocolManager.cs: Colorize nicks in nick changes and
